--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,35 @@
+<!-- dont explicity load this webpage -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> <!--need to use this to load the correct css-->
-    <title>Home page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='base_style.css') }}"> <!--need to use this to load the correct css-->
+    <!-- leave the block empty so we can directly modify it in the child template -->
+    {% block style %}{% endblock %}
+    <title>{%block title%} Home Page {%endblock%}</title>
 </head>
 <body>
-    <p> hello there</p>
-    
+    <header>
+        <h1>Library</h1>
+        {%block nav_bar%}
+        <!--{#% if show_nav_bar %#} this is how u comment out the jinja  code...--> 
+        {% if show_nav_bar %}
+        <nav>
+            <ul>
+                <!-- difference between {#{}#} and {##}, {#{}#} = directly compute it and put it into the html whereas {##} are used for control structures -->
+                 <!-- ^^ remember those hashtags are neccessary to comment out jinja code -->
+                <li><a href="{{ url_for('routes.home') }}">Home</a></li>
+                <li><a href="{{ url_for('routes.books') }}">Books</a></li>
+                <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                <li><a href="{{ url_for('auth.register')}}">Reigster</a></li>
+            </ul>
+        </nav>
+        {%endif%}
+        {%endblock%}
+   
+    </header>
+    {%block content%}
+    {%endblock%}
 </body>
 </html>
