--- a/templates/login.html
+++ b/templates/login.html
@@ -8,4 +8,22 @@
 {%block style%} <link rel="stylesheet" href="{{url_for('static', filename='login_style.css')}}"> {%endblock%}
 
 <!-- lets say we dont want anything in this. we can just have it empty. but we have to load them, if we dont load them (like with the nav bar) itll just load anyways since this inherits from the base template-->
-{%block content%} <p>hi</p {%endblock%}
+{%block content%} 
+    <form action="{{ url_for('auth.login') }}", method="POST"> <!--action = where should the form be send upon completion-->
+        <div>
+            <label for="email">Email</label> <!-- just match the for to the id. its just for convenience to the user-->
+            <input type="email", id="email", name="email" required> <!--type email means the broswer will know what an email look like, required = must be filled out-->
+            <!-- id = used later for javascript, name = acts as a key in the key-value pairs sent to the server when a form is submitted (value = whats in form) basically its what represents the data/// email = request.form['email']-->
+        </div>
+        
+        <div>
+            <label for="password">Password</label>
+            <input type="password", id="password", name="password" required>
+        </div>
+
+        <div>
+            <button type="submit">Login</button>
+        </div>
+    </form>
+
+{%endblock%}
