--- a/static/base_style.css
+++ b/static/base_style.css
@@ -14,7 +14,7 @@ body {
 }
 
 /* Header styles */
-header {
+.nav-bar {
     display: flex; /* Use flexbox for layout -> all children of things in the header are now flexbox*/
     justify-content: space-between; /* Space between items -> pushing items to the edge of the header*/
     align-items: center; /* Center items vertically */
@@ -23,18 +23,18 @@ header {
     padding: 20px; /* Padding inside the header - remember this is all ways*/ 
 }
 
-nav ul {
+.nav-bar nav ul {
     list-style-type: none; /* No bullets */
     padding: 0; /* Remove padding */
     display: flex; /* Use flexbox for horizontal layout */
     /* flex-direction: column; -> this will make them into columns but by default a flexbox is horizontal*/ 
 }
 
-nav ul li {
+.nav-bar nav ul li {
     margin: 0 15px; /* Spacing between items */
 }
 
-nav ul li a {
+.nav-bar nav ul li a {
     color: white; /* Link color */
     text-decoration: none; /* Remove underline */
     padding: 10px 15px; /* Padding around links */
@@ -42,6 +42,23 @@ nav ul li a {
     transition: background-color 0.3s; /* Smooth hover effect */
 }
 
-nav ul li a:hover {
+.nav-bar nav ul li a:hover {
     background-color: #003d7a; /* Darker blue on hover */
+}
+
+.user-status {
+    display: flex;
+    justify-content: right;
+    background-color: #f1f1f1e1;
+    padding: 10px;
+    font-size: 18px;
+    color: #000;
+    border-bottom: 1px solid #ddd;
+}
+
+.user-status p {
+    display: flex;
+    margin: 0;
+    padding-right: 20px;
+    font-weight: bold;
 }
