before adding everything 1 one form to submit the "all-at-once" in add_book

--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -86,9 +86,24 @@
                 <!-- text-area = mutli line, rows = how many lines to show, placeholder = what shows up before the user types anything -->
                 <textarea id="description" name="description" rows="4" placeholder="Enter a brief description."></textarea>
 
-                <button type="button" id = "next_button1">Next</button>
+                <button type="button" id = "next_button2">Next</button>
+            </form>
+        
+            
+        </section>
+
+       
+    </div>
+
+    <div id = "all-at-once-content" style="display: none;">
+        <section>
+            <form action="add_book.html" method="POST" >
+                <label for="content">Conent</label>
+                <textarea name="cotent" id="conent" rows = "16" placeholder="Enter the book contents here"></textarea>
+                <button type="submit">Submit</button>
             </form>
         </section>
+       
     </div>
 
 
