--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -72,9 +72,13 @@
             <div id='all-at-once-first-form'>
                 <label for="title">Book Title</label>
                 <input type="text" id="title" name="title" required>
+                <span class="error-message" style="display: none; color: red;">Please fill out this field.</span>
+
 
                 <label for="author">Author</label>
                 <input type="text" id="author" name="author" required>
+                <span class="error-message" style="display: none; color: red;">Please fill out this field.</span>
+
 
                 <label for="genre">Genre</label>
                 <select id="genre" name="genre" required>
@@ -86,9 +90,13 @@
                     <option value="science fiction">Science Fiction</option>
                     <option value="romance">Romance</option>
                 </select>
+                <span class="error-message" style="display: none; color: red;">Please fill out this field.</span>
+
 
                 <label for="year">Publication Year</label>
                 <input type="number" id="year" name="year" required>
+                <span class="error-message" style="display: none; color: red;">Please fill out this field.</span>
+
 
                 <label for="description">Description</label>
                 <textarea id="description" name="description" rows="4" placeholder="Enter a brief description."></textarea>
@@ -99,6 +107,8 @@
             <div id='all-at-once-content' style="display: none;">
                 <label for="content">Content</label>
                 <textarea name="content" id="content" rows="16" placeholder="Enter the book contents here" required></textarea>
+                <span class="error-message" style="display: none; color: red;">Please fill out this field.</span>
+
                 <button type="submit">Submit</button> 
             </div>
         </form>
