--- a/templates/home.html
+++ b/templates/home.html
@@ -11,25 +11,36 @@
     
 <div class="book-grid">
     {% for book in books %}
-    <a href="/check_out?book_id={{ book.id }}" class="book-card">
+    <form action="/check_out" method="POST" class="book-form"> <!-- Changed class name to avoid conflict -->
+        <!-- Hidden fields to store book data -->
+        <input type="hidden" name="book_id" value="{{ book.id }}">
+        <input type="hidden" name="title" value="{{ book.title }}">
+        <input type="hidden" name="author" value="{{ book.author }}">
+        <input type="hidden" name="genre" value="{{ book.genre }}">
+        <input type="hidden" name="year" value="{{ book.year }}">
+        <input type="hidden" name="rating" value="{{ book.rating }}">
+        <input type="hidden" name="added_by" value="{{ book.user.email }}">
 
+        <!-- The clickable book card -->
         <div class="book-card">
             <div class="book-details">
                 <h3>{{ book.title }}</h3>
             </div>
-
             <img src="/static/images/book_icon.png" alt="Book Image" class="book-image">
             <div class="book-details">
                 <p>Author: {{ book.author }}</p>
                 <p>Genre: {{ book.genre }}</p>
                 <p>Year: {{ book.year }}</p>
-                <p>Rating: {{book.rating}}</p>
-                <p>Added by: {{ book.user.email }}</p> <!-- Display user's email who added the book -->
+                <p>Rating: {{ book.rating }}</p>
+                <p>Added by: {{ book.user.email }}</p>
             </div>
         </div>
-    </a>
-
+    </form>
     {% endfor %}
 </div>
 
+{%endblock%}
+
+{%block javascript%}
+<script src = "{{url_for('static', filename = 'home.js')}}"></script>
 {%endblock%}
